# libdetection

lib/sqli/: sqli_parser.y
perf/: CMakeLists.txt  perf.c
